Fix navbar cutting off pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 :root {
-    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: 'Poppins', system-ui, Avenir, Helvetica, Arial, sans-serif;
     background: #FAFAFA;
     min-height: 100vh;
-    overflow-x: hidden;
-    
+    /* overflow: hidden; */
 }
 
 html, body, #root {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
+
+* {
+    font-family: 'Poppins', sans-serif !important;
+}
